Fixed minor layout issues

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,5 +1,6 @@
 @use "variables";
 .header {
+  height: 100px;
   margin: 0px 20px;
   display: flex;
   justify-content: space-between;
