--- a/src/index.scss
+++ b/src/index.scss
@@ -14,8 +14,10 @@ body {
     variables.$bg-primary,
     variables.$bg-secondary
   );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   color: variables.$text-primary;
-  height: 100%;
+  height: 100vh;
   font-size: 16px;
   font-family: Roboto;
 }
